--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
+          node-version: '20'
+          cache: 'yarn'
+      - name: Install dependencies
+        run: |
+          yarn install --frozen-lockfile
       - run: npm install
       - name: Publish to Cloudflare
         uses: cloudflare/wrangler-action@1.3.0
