--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           cache: 'yarn'
       - name: Install dependencies
         run: |
-          yarn install
+          npm install
       - name: Publish to Cloudflare
         uses: cloudflare/wrangler-action@1.3.0
         with:
