--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,10 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+      - name: Debug environment variables
+        run: echo "CF_ACCOUNT_ID is $CF_ACCOUNT_ID"
+        env:
+          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
       - name: Publish to Cloudflare
         uses: cloudflare/wrangler-action@v3
         with:
